--- a/src/app/initial/initial.component.html
+++ b/src/app/initial/initial.component.html
@@ -2,8 +2,10 @@
   <h2 class="title">Hestia ERP</h2>
   <!--Buttons-->
   <div class="top-bar-buttons">
-    <button mat-raised-button color="primary">Primary</button>
-    <button mat-button>Sign Up</button>
-    <button mat-button>Sign Up</button>
+    <button mat-button color="primary">Features</button>
+    <button mat-button color="primary">Pricing</button>
+    <button mat-raised-button color="accent">Schedule a demo</button>
   </div>
 </div>
+<mat-divider></mat-divider>
+<h2 class="subtitle">Managing your grocery store just got <u>easier</u></h2>
