--- a/src/app/initial/initial.component.scss
+++ b/src/app/initial/initial.component.scss
@@ -5,7 +5,8 @@
 
 .title {
   display: flex;
-  padding-left: 0px;
+  font-weight: lighter;
+  padding-left: 15px;
   align-items: center;
   gap: 10px;
 }
@@ -20,12 +21,10 @@
   flex: 1 0 0;
 }
 
-.top-bar-button {
-  display: flex;
-  height: 59px;
-  padding: 0px 15px;
-  justify-content: flex-end;
-  align-items: center;
-  gap: 10px;
-  flex: 1 0 0;
+.subtitle {
+  text-align: center;
+  padding-left: 7%;
+  padding-right: 7%;
+  font-size: 6em;
+  font-weight: 300;
 }
