--- a/src/app/initial/initial.component.html
+++ b/src/app/initial/initial.component.html
@@ -1,11 +1,7 @@
-<div class="top-bar">
-  <h2 class="title">Hestia ERP</h2>
-  <!--Buttons-->
-  <div class="top-bar-buttons">
-    <button mat-button color="primary">Features</button>
-    <button mat-button color="primary">Pricing</button>
-    <button mat-raised-button color="accent">Schedule a demo</button>
-  </div>
+<app-top-bar></app-top-bar>
+<h1 class="title">Managing your grocery store just got <span class="primary"><u>easier</u></span></h1>
+<p class="description">Streamline your grocery business with our affordable and intuitive ERP solution!</p>
+<div class="cta">
+  <button mat-raised-button class="cta" color="primary" style="color: white ;">Schedule a demo</button>
+
 </div>
-<mat-divider></mat-divider>
-<h2 class="subtitle">Managing your grocery store just got <u>easier</u></h2>
