--- a/src/app/initial/initial.component.scss
+++ b/src/app/initial/initial.component.scss
@@ -1,30 +1,35 @@
-.top-bar {
-  display: flex;
-  align-items: center;
-}
+@use '@angular/material' as mat;
+$my-palette: mat.define-palette(mat.$indigo-palette);
 
 .title {
-  display: flex;
-  font-weight: lighter;
-  padding-left: 15px;
-  align-items: center;
-  gap: 10px;
+  text-align: center;
+  padding-left: 12%;
+  padding-right: 12%;
+  font-size: 6em;
+  font-weight: 400;
 }
 
-.top-bar-buttons {
-  display: flex;
-  height: 59px;
-  padding: 0px 15px;
-  justify-content: flex-end;
-  align-items: center;
-  gap: 10px;
-  flex: 1 0 0;
-}
-
-.subtitle {
+.description {
   text-align: center;
   padding-left: 7%;
   padding-right: 7%;
-  font-size: 6em;
-  font-weight: 300;
+  font-size: 1.2em;
+
+}
+
+.primary {
+  color: #d4af37;
+}
+
+.cta {
+  text-align: center;
+
+  font-size: 1em;
+}
+
+.cta div {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
 }
