--- a/src/app/initial/initial.component.html
+++ b/src/app/initial/initial.component.html
@@ -2,6 +2,25 @@
 <h1 class="title">Managing your grocery store just got <span class="primary"><u>easier</u></span></h1>
 <p class="description">Streamline your grocery business with our affordable and intuitive ERP solution!</p>
 <div class="cta">
-  <button mat-raised-button class="cta" color="primary" style="color: white ;">Schedule a demo</button>
-
+  <div>
+    <button mat-raised-button class="cta" color="primary" style="color: white ;">Features</button>
+  </div>
+  <button mat-raised-button class="cta">Pricing</button>
 </div>
+
+<!--Testimonials-->
+
+<div class="logo-container">
+    <div class="logos">
+      <!-- Add your client logos as image elements below -->
+      <img src="galp.png" alt="Client Logo 1">
+      <img src="galp.png" alt="Client Logo 2">
+      <img src="galp.png" alt="Client Logo 3">
+      <img src="galp.png" alt="Client Logo 3">
+      <img src="galp.png" alt="Client Logo 3">
+      <img src="galp.png" alt="Client Logo 3">
+      <img src="galp.png" alt="Client Logo 3">
+      <img src="galp.png" alt="Client Logo 3">
+      <!-- Add more client logos here -->
+    </div>
+  </div>
