--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -4,6 +4,6 @@
   <div class="top-bar-buttons">
     <button mat-button class="top-bar-button">Features</button>
     <button mat-button class="top-bar-button">Pricing</button>
-    <button mat-raised-button class="top-bar-button" color="primary" style="color: white ;">Schedule a demo</button>
+    <button mat-raised-button class="top-bar-button" color="primary" style="color: white ;">I'm interested!</button>
   </div>
 </div>
