--- a/src/app/initial/initial.component.html
+++ b/src/app/initial/initial.component.html
@@ -1,26 +1,100 @@
-<app-top-bar></app-top-bar>
+<div class="top-bar">
+  <h2 class="brand">Hestia ERP</h2>
+  <!--Buttons-->
+  <div class="top-bar-buttons">
+    <button mat-button (click)="scroll(features)" class="top-bar-button">Features</button>
+    <button mat-button class="top-bar-button">Pricing</button>
+    <button mat-raised-button class="top-bar-button" color="primary" style="color: white ;">I'm interested!</button>
+  </div>
+</div>
+
+
 <h1 class="title">Managing your grocery store just got <span class="primary"><u>easier</u></span></h1>
 <p class="description">Streamline your grocery business with our affordable and intuitive ERP solution!</p>
 <div class="cta">
   <div>
-    <button mat-raised-button class="cta" color="primary" style="color: white ;">Features</button>
+    <button mat-raised-button class="cta" color="primary" (click)="scroll(features)" style="color: white ;">Features</button>
   </div>
   <button mat-raised-button class="cta">Pricing</button>
 </div>
 
-<!--Testimonials-->
 
-<div class="logo-container">
-    <div class="logos">
-      <!-- Add your client logos as image elements below -->
-      <img src="galp.png" alt="Client Logo 1">
-      <img src="galp.png" alt="Client Logo 2">
-      <img src="galp.png" alt="Client Logo 3">
-      <img src="galp.png" alt="Client Logo 3">
-      <img src="galp.png" alt="Client Logo 3">
-      <img src="galp.png" alt="Client Logo 3">
-      <img src="galp.png" alt="Client Logo 3">
-      <img src="galp.png" alt="Client Logo 3">
-      <!-- Add more client logos here -->
+<h4 class="small-title">Clients</h4>
+
+<!--Testimonials-->
+<div class="testimonial-container">
+  <div class="testimonial-wrapper" id="testimonialWrapper">
+    <!-- Add your client logos and testimonials here -->
+    <div class="testimonial">
+      <img src="assets/galp.png" alt="Client 1">
     </div>
+    <div class="testimonial">
+      <img src="assets/galp.png" alt="Client 2">
+    </div>
+    <div class="testimonial">
+      <img src="assets/galp.png" alt="Client 2">
+    </div>
+    <div class="testimonial">
+      <img src="assets/galp.png" alt="Client 2">
+    </div>
+    <div class="testimonial">
+      <img src="assets/galp.png" alt="Client 2">
+    </div>
+    <div class="testimonial">
+      <img src="assets/galp.png" alt="Client 2">
+    </div>
+    <div class="testimonial">
+      <img src="assets/galp.png" alt="Client 2">
+    </div>
+    <!-- Add more testimonials as needed -->
   </div>
+</div>
+
+
+<div #features>
+<h1 class="title">Features</h1>
+<div class="two-cards">
+  <mat-card class="card">
+    <mat-card-header>
+      <mat-card-title class="card-title">Effortless access, intuitive interface</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+        <p>
+          We understand the frustrations users often face with complex navigation in integrated systems.
+          That's why we've made accessibility our top priority.
+          Our software is designed to ensure a seamless and user-friendly experience, mitigating the challenges associated with ERP usage.
+        </p>
+    </mat-card-content>
+  </mat-card>
+  <mat-card class="card">
+    <mat-card-header>
+      <mat-card-title class="card-title">Shiba Inu</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <p>This card indeterminates progress bar.</p>
+    </mat-card-content>
+  </mat-card>
+</div>
+
+<div class="two-cards card-bottom-p">
+  <mat-card class="card">
+    <mat-card-header>
+      <mat-card-title class="card-title">Shiba Inu</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <p>This card indeterminates progress bar.</p>
+    </mat-card-content>
+  </mat-card>
+  <mat-card class="card">
+    <mat-card-header>
+      <mat-card-title class="card-title">Shiba Inu</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <p>This card indeterminates progress bar.</p>
+    </mat-card-content>
+  </mat-card>
+</div>
+
+</div>
+
+
