--- a/src/styles.scss
+++ b/src/styles.scss
@@ -64,6 +64,12 @@ $HestiaPage-theme: mat.define-light-theme((
 @include mat.all-component-themes($HestiaPage-theme);
 
 /* You can add global styles to this file, and also import other style files */
-html, body { height: 100%; }
+html, body { width: 100%;
+  height: 100%;
+  background: linear-gradient(180deg, #FFF 0%, #D4AF37 100%);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 button { font-family: inherit; }
+
