--- a/src/styles.scss
+++ b/src/styles.scss
@@ -66,7 +66,7 @@ $HestiaPage-theme: mat.define-light-theme((
 /* You can add global styles to this file, and also import other style files */
 html, body { width: 100%;
   height: 100%;
-  background: linear-gradient(180deg, #FFF 0%, #D4AF37 100%);
+  background: linear-gradient(180deg, #FFF 40%, #ffd54c 100%);
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
