--- a/src/app/initial/initial.component.scss
+++ b/src/app/initial/initial.component.scss
@@ -99,8 +99,7 @@
 .small-title {
   font-size: 1.5em;
   font-weight: 400;
-  padding-left: 12%;
-  padding-right: 12%;
+  padding: 1rem;
   text-align: center;
 }
 
@@ -117,7 +116,6 @@
   width: 344px;
   flex-direction: column;
   align-items: flex-start;
-  flex-shrink: 0;
   //background: #d4af37;
   //color: white;
 }
@@ -129,4 +127,42 @@
 .card-title {
   font-size: 1em;
   font-weight: 600;
+}
+
+.pricing-card {
+  width: 450px;
+
+}
+
+.text-frame {
+  display: flex;
+  align-items: flex-start;
+  align-self: stretch;
+
+}
+
+.text-block {
+  display: flex;
+  padding: 16px;
+  flex-direction: column;
+  flex: 1 0 0;
+  text-align: center;
+}
+
+.text-block h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+}
+
+.twelve-month-commit-text {
+  font-size: 0.8em;
+  font-weight: 200;
+}
+
+a {
+  text-decoration: none;
+}
+
+.center-button {
+  justify-content: center;
+align-items: center;
 }
