--- a/src/app/initial/initial.component.html
+++ b/src/app/initial/initial.component.html
@@ -47,59 +47,49 @@
 <h1 class="title" style="color: white;">Features</h1>
 <div class="two-cards">
   <mat-card class="card">
-    <mat-card-header>
-      <mat-card-title class="card-title">Effortless access, intuitive interface</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-        <p>
-          We understand the frustrations users often face with complex navigation in integrated systems.
-          That's why we've made accessibility our top priority.
-          Our software is designed to ensure a seamless and user-friendly experience, mitigating the challenges associated with ERP usage.
-        </p>
-        <img mat-card-image src="assets/ui.png" alt="UI Image" style="width: 570px;">
 
-    </mat-card-content>
+      <mat-tab-group mat-stretch-tabs="true">
+        <mat-tab label="Effortless access, intuitive interface">
+          <div class="feature">
+            <p>
+              We understand the frustrations users often face with complex navigation in integrated systems.
+              That's why we've made accessibility our top priority.
+              Our software is designed to ensure a seamless and user-friendly experience, mitigating the challenges associated with ERP usage.
+            </p>
+            <img mat-card-image src="assets/ui.png" alt="UI Image" style="width: 70vw;">
+          </div>
+
+        </mat-tab>
+        <mat-tab label="Point of Sale (POS) integration">
+          <div class="feature">
+            <p>
+              Seamless integration between point of sale (POS) software and ERP system enables real-time data sharing and coordination, streamlining sales transactions and centralizing business processes.
+            </p>
+            <img mat-card-image src="assets/pos.png" alt="POS Image" style="width: 70vw;">
+          </div>
+        </mat-tab>
+        <mat-tab label="Contactless Orders/Purchasing">
+          <div class="feature">
+            <p>
+              Our AI-powered ERP system automates supplier communication, effortlessly reaching out to each supplier via email to confirm transactions, saving you time and effort.
+            </p>
+            <img mat-card-image src="assets/supplier.png" alt="Contactless Image" style="width: 70vw;">
+          </div>
+
+        </mat-tab>
+        <mat-tab label="IoT + AI integration">
+          <div class="feature">
+            <p>
+              Revolutionize your ERP experience: AI and machine learning for advanced analytics, IoT integration for real-time data, and enhanced mobile support for seamless on-the-go access.
+            </p>
+            <img mat-card-image src="assets/BBD.png" alt="BBD Image" style="width: 70vw;">
+          </div>
+
+        </mat-tab>
+      </mat-tab-group>
   </mat-card>
-  <mat-card class="card">
-    <mat-card-header>
-      <mat-card-title class="card-title">Point of Sale (POS) integration</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-      <p>
-        Seamless integration between point of sale (POS) software and ERP system enables real-time data sharing and coordination, streamlining sales transactions and centralizing business processes.
-      </p>
-      <img mat-card-image src="assets/pos.png" alt="POS Image" style="width: 570px;">
-    </mat-card-content>
-  </mat-card>
+
 </div>
-
-<div class="two-cards card-bottom-p">
-  <mat-card class="card">
-    <mat-card-header>
-      <mat-card-title class="card-title">Contactless Orders/Purchasing</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-      <p>
-        Our AI-powered ERP system automates supplier communication, effortlessly reaching out to each supplier via email to confirm transactions, saving you time and effort.
-      </p>
-      <img mat-card-image src="assets/supplier.png" alt="Contactless Image" style="width: 570px;">
-
-    </mat-card-content>
-  </mat-card>
-  <mat-card class="card">
-    <mat-card-header>
-      <mat-card-title class="card-title">IoT + AI integration</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-      <p>
-        Revolutionize your ERP experience: AI and machine learning for advanced analytics, IoT integration for real-time data, and enhanced mobile support for seamless on-the-go access.
-      </p>
-      <img mat-card-image src="assets/BBD.png" alt="BBD Image" style="width: 570px;">
-
-    </mat-card-content>
-  </mat-card>
-</div>
-
 </div>
 
 
