--- a/src/app/initial/initial.component.scss
+++ b/src/app/initial/initial.component.scss
@@ -32,7 +32,7 @@
   text-align: center;
   padding-left: 12%;
   padding-right: 12%;
-  font-size: 5em;
+  font-size: 5rem;
   font-weight: 400;
 }
 
@@ -113,7 +113,7 @@
 
 .card {
   display: flex;
-  width: 600px;
+  width: 80vw;
   flex-direction: column;
   align-items: flex-start;
   //background: #d4af37;
@@ -164,5 +164,14 @@ a {
 
 .center-button {
   justify-content: center;
-align-items: center;
+  align-items: center;
+  text-align: center;
+}
+
+.feature {
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding-right: 1rem;
+  padding-left: 1rem;
 }
