--- a/src/app/initial/initial.component.html
+++ b/src/app/initial/initial.component.html
@@ -4,7 +4,8 @@
   <div class="top-bar-buttons">
     <button mat-button (click)="scroll(features)" class="top-bar-button">Features</button>
     <button mat-button class="top-bar-button" (click)="scroll(pricing)">Pricing</button>
-    <a mat-raised-button href="https://y3coyql3pj5.typeform.com/to/Ep2BlFgY" color="primary" style="color: white;">I'm Interested!</a>
+    <a mat-raised-button href="https://y3coyql3pj5.typeform.com/to/Ep2BlFgY" color="primary" style="color: white;">I'm
+      Interested!</a>
   </div>
 </div>
 
@@ -13,9 +14,10 @@
 <p class="description">Streamline your grocery business with our affordable and intuitive ERP solution!</p>
 <div class="cta">
   <div>
-    <a mat-raised-button href="https://y3coyql3pj5.typeform.com/to/Ep2BlFgY" class="cta" color="primary" style="color: white;">I'm Interested!</a>
+    <a mat-raised-button href="https://y3coyql3pj5.typeform.com/to/Ep2BlFgY" class="cta" color="primary"
+      style="color: white;">I'm Interested!</a>
   </div>
-    <button mat-raised-button class="cta" (click)="scroll(features)">Features</button>
+  <button mat-raised-button class="cta" (click)="scroll(features)">Features</button>
 </div>
 
 
@@ -44,9 +46,9 @@
 <mat-divider></mat-divider>
 
 <div #features style="background-color: #d4af37; padding-bottom: 1rem; padding-top: 1rem;">
-<h1 class="title" style="color: white;">Features</h1>
-<div class="two-cards">
-  <mat-card class="card">
+  <h1 class="title" style="color: white;">Features</h1>
+  <div class="two-cards">
+    <mat-card class="card">
 
       <mat-tab-group mat-stretch-tabs="true">
         <mat-tab label="Effortless access, intuitive interface">
@@ -54,7 +56,8 @@
             <p>
               We understand the frustrations users often face with complex navigation in integrated systems.
               That's why we've made accessibility our top priority.
-              Our software is designed to ensure a seamless and user-friendly experience, mitigating the challenges associated with ERP usage.
+              Our software is designed to ensure a seamless and user-friendly experience, mitigating the challenges
+              associated with ERP usage.
             </p>
             <img mat-card-image src="assets/ui.png" alt="UI Image" style="width: 70vw;">
           </div>
@@ -63,7 +66,8 @@
         <mat-tab label="Point of Sale (POS) integration">
           <div class="feature">
             <p>
-              Seamless integration between point of sale (POS) software and ERP system enables real-time data sharing and coordination, streamlining sales transactions and centralizing business processes.
+              Seamless integration between point of sale (POS) software and ERP system enables real-time data sharing
+              and coordination, streamlining sales transactions and centralizing business processes.
             </p>
             <img mat-card-image src="assets/pos.png" alt="POS Image" style="width: 70vw;">
           </div>
@@ -71,7 +75,8 @@
         <mat-tab label="Contactless Orders/Purchasing">
           <div class="feature">
             <p>
-              Our AI-powered ERP system automates supplier communication, effortlessly reaching out to each supplier via email to confirm transactions, saving you time and effort.
+              Our AI-powered ERP system automates supplier communication, effortlessly reaching out to each supplier via
+              email to confirm transactions, saving you time and effort.
             </p>
             <img mat-card-image src="assets/supplier.png" alt="Contactless Image" style="width: 70vw;">
           </div>
@@ -80,16 +85,17 @@
         <mat-tab label="IoT + AI integration">
           <div class="feature">
             <p>
-              Revolutionize your ERP experience: AI and machine learning for advanced analytics, IoT integration for real-time data, and enhanced mobile support for seamless on-the-go access.
+              Revolutionize your ERP experience: AI and machine learning for advanced analytics, IoT integration for
+              real-time data, and enhanced mobile support for seamless on-the-go access.
             </p>
             <img mat-card-image src="assets/BBD.png" alt="BBD Image" style="width: 70vw;">
           </div>
 
         </mat-tab>
       </mat-tab-group>
-  </mat-card>
+    </mat-card>
 
-</div>
+  </div>
 </div>
 
 
@@ -124,7 +130,8 @@
 
 
       <mat-card-actions class="center-button">
-        <a mat-raised-button href="https://y3coyql3pj5.typeform.com/to/Ep2BlFgY" color="primary" style="color: white;">I'm Interested!</a>
+        <a mat-raised-button href="https://y3coyql3pj5.typeform.com/to/Ep2BlFgY" color="primary"
+          style="color: white;">I'm Interested!</a>
       </mat-card-actions>
     </mat-card>
   </div>
