hide top-bar buttons on mobile

--- a/src/app/initial/initial.component.html
+++ b/src/app/initial/initial.component.html
@@ -1,4 +1,4 @@
-<div class="top-bar">
+<div class="top-bar header">
   <img class="brand" src="assets/hestia.png" alt="Hestia ERP" style="height: 50px;">
   <!--Buttons-->
   <div class="top-bar-buttons">
