--- a/src/app/initial/initial.component.scss
+++ b/src/app/initial/initial.component.scss
@@ -212,6 +212,10 @@ a {
     justify-content: space-between;
   }
 
+  .header .top-bar-buttons {
+    display: none;
+  }
+
   .title {
     padding-left: 0px;
     padding-right: 0px;
