--- a/src/app/initial/initial.component.html
+++ b/src/app/initial/initial.component.html
@@ -4,7 +4,7 @@
   <div class="top-bar-buttons">
     <button mat-button (click)="scroll(features)" class="top-bar-button">Features</button>
     <button mat-button class="top-bar-button" (click)="scroll(pricing)">Pricing</button>
-    <a mat-raised-button href="https://y3coyql3pj5.typeform.com/to/Ep2BlFgY" color="primary" style="color: white;">I'm
+    <a mat-raised-button href="https://forms.gle/S2jMVqjunREzqP4d8" color="primary" style="color: white;">I'm
       Interested!</a>
   </div>
 </div>
@@ -14,7 +14,7 @@
 <p class="description">Streamline your grocery business with our affordable and intuitive ERP solution!</p>
 <div class="cta">
   <div>
-    <a mat-raised-button href="https://y3coyql3pj5.typeform.com/to/Ep2BlFgY" class="cta" color="primary"
+    <a mat-raised-button href="https://forms.gle/S2jMVqjunREzqP4d8" class="cta" color="primary"
       style="color: white;">I'm Interested!</a>
   </div>
   <button mat-raised-button class="cta" (click)="scroll(features)">Features</button>
@@ -130,7 +130,7 @@
 
 
       <mat-card-actions class="center-button">
-        <a mat-raised-button href="https://y3coyql3pj5.typeform.com/to/Ep2BlFgY" color="primary"
+        <a mat-raised-button href="https://forms.gle/S2jMVqjunREzqP4d8" color="primary"
           style="color: white;">I'm Interested!</a>
       </mat-card-actions>
     </mat-card>
@@ -147,6 +147,6 @@
   <!--Buttons-->
   <div class="top-bar-buttons">
     <p>Built for EIA 2023 Edition</p>
-    <a mat-raised-button href="https://y3coyql3pj5.typeform.com/to/Ep2BlFgY">I'm Interested!</a>
+    <a mat-raised-button href="https://forms.gle/S2jMVqjunREzqP4d8">I'm Interested!</a>
   </div>
 </div>
